--- a/data-architect.html
+++ b/data-architect.html
@@ -121,7 +121,7 @@
 <p><span class="badge badge-light">Burnaby Burnaby Canada</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698417374-senior-data-analytics-architect'>CapTech Consulting Senior Data & Analytics Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999698417374-senior-data-analytics-architect'>CapTech Consulting Senior Data & Analytics Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Atlanta, GA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
@@ -147,7 +147,7 @@
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-30</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698324956-senior-pl-sql-database-architect'>BuzzClan LLC Senior PL/ SQL Database Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/BuzzClanLLC/743999698324956-senior-pl-sql-database-architect'>BuzzClan LLC Senior PL/ SQL Database Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Dallas, TX</span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
@@ -167,7 +167,7 @@
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qhvaVfwB&k=Job&j=ohjnafwR&__jvst=Employee+Referral&__jvsd=sfdx1hwM&__jvsc=Twitter&bid=n0qtmMww'>Accudata Systems, Inc. Careers - Data Center &amp; Cloud Solutions Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qhvaVfwB&k=Job&j=ohjnafwR&__jvst=Employee+Referral&__jvsd=sfdx1hwM&__jvsc=Twitter&bid=n0qtmMww'>Accudata Systems, Inc. Careers - Data Center &amp; Cloud Solutions Architect</a></h5> 
 <p><span class="badge badge-light">Dallas, Texas</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -181,7 +181,7 @@ dig?...</p>
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=o4Lkbfw4&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nOQZlMwf'>Guidewire Software, Inc. Careers - Staff Engineer / Big Data Architect, Cloud Data Platform - San Mateo, CA</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=o4Lkbfw4&__jvst=Employee&__jvsd=sv16Ffw1&__jvsc=Twitter&bid=nOQZlMwf'>Guidewire Software, Inc. Careers - Staff Engineer / Big Data Architect, Cloud Data Platform - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-28</p>
 <hr/>
@@ -249,11 +249,11 @@ dig?...</p>
 <p><span class="badge badge-light">San Jose, CA</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/bjss/jobs/1556003'>Job Application for Data Architect at BJSS</a></h5> 
+<h5><a href='https://boards.greenhouse.io/bjss/jobs/1556003'>Job Application for Data Architect at BJSS</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697964726-senior-data-analytics-architect'>CapTech Consulting Senior Data & Analytics Architect | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CapTechConsulting/743999697964726-senior-data-analytics-architect'>CapTech Consulting Senior Data & Analytics Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Chicago, IL</span></p>
 <p>Posted on: 2019-10-23</p>
 <hr/>
@@ -281,7 +281,7 @@ dig?...</p>
 <p><span class="badge badge-light">Richmond, VA, USA</span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/9exu73upgipych8suk6n7ywpba'>Senior Data Architect | Manifest Solutions</a></h5> 
+<h5><a href='https://jobs.crelate.com/portal/manifestsolutions/job/9exu73upgipych8suk6n7ywpba'>Senior Data Architect | Manifest Solutions</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -310,7 +310,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/DatamaticsGlobalServicesInc/743999697794369-iam-consultant-architect-remote-job'>Datamatics Global Services Inc IAM Consultant / Architect - Remote job | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/DatamaticsGlobalServicesInc/743999697794369-iam-consultant-architect-remote-job'>Datamatics Global Services Inc IAM Consultant / Architect - Remote job | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Madison, WI</span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
@@ -322,7 +322,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://referrals.ibm.com/ibmreppify/jobs/199127?bpin=1046&com=2&rin=1467367'>Job Profile - Senior Data Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://referrals.ibm.com/ibmreppify/jobs/199127?bpin=1046&com=2&rin=1467367'>Job Profile - Senior Data Architect</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-21</p>
 <hr/>
@@ -412,7 +412,7 @@ application. Resume/CV. ATTACH RESUME/CV. Couldn't auto-read resume.</p>
 <p><span class="badge badge-light">Boston, MA</span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/InfiniteComputingSystems/743999697477822-database-architect-looking-for-locals-to-lansing-mi'>Infinite Computing Systems Database Architect - looking for locals to Lansing, MI | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/InfiniteComputingSystems/743999697477822-database-architect-looking-for-locals-to-lansing-mi'>Infinite Computing Systems Database Architect - looking for locals to Lansing, MI | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-16</p>
 <hr/>
@@ -454,7 +454,7 @@ our Federal Client's business in defining requirements to support machine?...</p
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-15</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=o4Lkbfw4&__jvst=Employee&__jvsd=svnAVfw7&__jvsc=Twitter&bid=nm2B9Mwp'>Guidewire Software, Inc. Careers - Staff Engineer / Big Data Architect, Cloud Data Platform - San Mateo, CA</a></h5> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=q3W9VfwN&k=Job&j=o4Lkbfw4&__jvst=Employee&__jvsd=svnAVfw7&__jvsc=Twitter&bid=nm2B9Mwp'>Guidewire Software, Inc. Careers - Staff Engineer / Big Data Architect, Cloud Data Platform - San Mateo, CA</a></h5> 
 <p><span class="badge badge-light">San Mateo, CA  San Mateo, CA  San Mateo, California</span></p>
 <p>Posted on:: 2019-10-15</p>
 <hr/>
